----------------------------------------------------------------------
 OmegaT 1.7.3 update 2 Changes
----------------------------------------------------------------------

1.7.3 update 2 vs. 1.7.3 update 1


  3 Enhancements
  3 Bugfixes

----------------------------------------------------------------------
1.7.3 update 2

  Implemented requests:

  - Command line parameters for OmegaT.exe
  http://sourceforge.net/support/tracker.php?aid=1900264  

  - Windows installer
  http://sourceforge.net/support/tracker.php?aid=1596625   

  - DocBook 5.0 filter  
  http://sourceforge.net/support/tracker.php?aid=1907008    
  
  Other enhancements:

  - New Arabic localisation (UI, readme, instant start)

  Bug fixes:

  - PO: Bad handling of plural messages on multiple lines 
  http://sourceforge.net/support/tracker.php?aid=1896781  

  - Some strings not translated when using external bundle
  http://sourceforge.net/support/tracker.php?aid=1922188 

  - XHTML: xmlns="http://www.w3.org... in every tag
  http://sourceforge.net/support/tracker.php?aid=1926940  

----------------------------------------------------------------------
 OmegaT 1.7.3 update 1 Changes
----------------------------------------------------------------------

1.7.3 update 1 vs. 1.7.3


  8 Enhancements
  7 Bugfixes

----------------------------------------------------------------------
1.7.3 update 1

  Implemented requests:

  - Exceptions for EN.*: Fig., St., middle name.
  http://sourceforge.net/support/tracker.php?aid=1856354 
  
  Other enhancements:
  
  - Serbo-Croatian localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Slovenian localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Russian localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Basque localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Hungarian localisation updated to 1.7.3 (UI, readme, instant start, documentation)