@@ -35,6 +35,7 @@ import java.util.ArrayList;
 import java.util.Locale;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.regex.*;
 
 
 /**
@@ -134,7 +135,7 @@ public class StaticUtils
         
         for (i=0; i<Array.getLength(flist); i++)
         {
-            if (flist[i].isDirectory())
+            if (flist[i].isDirectory())           
             {
                 continue;	// recurse into directories later
             }
@@ -144,7 +145,7 @@ public class StaticUtils
         {
             for (i=0; i<Array.getLength(flist); i++)
             {
-                if (flist[i].isDirectory())
+                if ( isProperDirectory(flist[i]) ) // Ignores some directories
                 {
                     // now recurse into subdirectories
                     buildFileList(lst, flist[i], true);
@@ -163,7 +164,7 @@ public class StaticUtils
         File [] flist = rootDir.listFiles();
         for (i=0; i<Array.getLength(flist); i++)
         {
-            if (flist[i].isDirectory())
+            if ( isProperDirectory(flist[i]) ) // Ignores some directories
             {
                 // now recurse into subdirectories
                 lst.add(flist[i].getAbsolutePath());
@@ -314,7 +315,31 @@ public class StaticUtils
                 return false;
         return true;
     }
+   
+    // List of CVS or SVN folders
+    private static final String CVS_SVN_FOLDERS = "(CVS)|(.svn)|(_svn)";        // NOI18N
     
+    private static final Pattern IGNORED_FOLDERS = 
+            Pattern.compile(CVS_SVN_FOLDERS);
+    
+    /**
+     * Tests whether a directory has to be used
+     * @return <code>true</code> or <code>false</code>
+     */
+    private static boolean isProperDirectory(File file)
+    {
+        if ( file.isDirectory() )
+        {
+            Matcher directoryMatch = IGNORED_FOLDERS.matcher(file.getName());
+            if (directoryMatch.matches())
+                return false;
+            else
+                return true;
+        }
+        else
+            return false;
+    }
+            
     /**
      * Converts a single char into valid XML.
      * Output stream must convert stream to UTF-8 when saving to disk.
