@@ -5,7 +5,7 @@
 1.7.3 update 2 vs. 1.7.3 update 1
 
 
-  3 Enhancements
+  4 Enhancements
   3 Bugfixes
 
 ----------------------------------------------------------------------
@@ -20,7 +20,10 @@
   http://sourceforge.net/support/tracker.php?aid=1596625   
 
   - DocBook 5.0 filter  
-  http://sourceforge.net/support/tracker.php?aid=1907008    
+  http://sourceforge.net/support/tracker.php?aid=1907008   
+
+  - Do not copy SVN/CVS folders from /source to /target  
+  http://sourceforge.net/support/tracker.php?aid=1774502    
   
   Other enhancements:
 
